apps/media/mylar3/deployment.yaml
#
# Reference:
# https://docs.linuxserver.io/images/docker-mylar3/#application-setup
#

apiVersion: v1
kind: Service
metadata:
  name: mylar3
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: mylar3
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: mylar3
  type: ClusterIP
  ports:
    - name: http
      port: 8090
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mylar3
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: mylar3
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: mylar3
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: mylar3
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: sheol
      containers:
        - name: mylar3
          image: ghcr.io/linuxserver/mylar3:latest # {"$imagepolicy": "media:mylar3"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 150Mi
            limits:
              cpu: 500m
              memory: 750Mi
          volumeMounts:
            - name: mylar3-pvc
              mountPath: /config
            - name: media-data-pvc
              mountPath: /data
      volumes:
        - name: mylar3-pvc
          persistentVolumeClaim:
            claimName: mylar3-pvc
        - name: media-data-pvc
          persistentVolumeClaim:
            claimName: media-data-pvc
