apps/media/mylar3/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mylar3-dashboard-https
  namespace: media
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: mylar3
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mylar3.powell.place`)
      middlewares:
        - name: security
          namespace: kube-system
      services:
        - name: mylar3
          port: http
